ultimo commit con cambio de estado de las preguntas respondidas

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
                 <div>
                     <h2>tus preguntas son :</h2>
                     <form id="formGeo">
-                        <label for="respuesta0">A- ¿cual es la montaña mas grande del mundo?</label>
-                        <input  id="respuesta0" required   name="respuesta0"  type="text">
+                        <label  id="l0"   for="respuesta0"></label>
+                        <input class="input"  id="respuesta0" required   name="respuesta0"  type="text">
+                        
+                        <label id="l1"   for="respuesta1"></label>
+                        <input class="input"  id="respuesta1" required   name="respuesta1" type="text">
 
-                        <label for="respuesta1">B- ¿Cuántos océanos hay en la Tierra?</label>
-                        <input  id="respuesta1" required   name="respuesta1" type="text">
-
-                        <label for="respuesta2">C- ¿Qué país tiene más habitantes?</label>
-                        <input  id="respuesta2" required   name="respuesta2" type="text">
+                        <label  id="l2"  for="respuesta2"></label>
+                        <input class="input"  id="respuesta2" required   name="respuesta2" type="text">
                         <button class="buttonGe" type="submit">listo</button>
                         <button class="btnL" type="button">cambiar de pregunta</button>
 
@@ -122,14 +122,14 @@
                     <div>
                         <h2>tus preguntas son :</h2>
                         <form id="formEnt">
-                            <label for="respuesta3">A- ¿que pelicula de hollywood tuvo la mayor recaudacion? \n (pequeña pista sus personajes son azules y altos ;)"</label>
-                            <input  id="respuesta3" required name="respuesta3" type="text">
+                            <label  id="l3"  for="respuesta3"></label>
+                            <input class="input"  id="respuesta3" required name="respuesta3" type="text">
 
-                            <label for="respuesta4">B- ¿Cómo se llamaba el cantante de Queen?</label>
-                            <input  id="respuesta4" required  name="respuesta4" type="text">
+                            <label  id="l4"  for="respuesta4"></label>
+                            <input class="input"  id="respuesta4" required  name="respuesta4" type="text">
 
-                            <label for="respuesta5">C- ¿A qué grupo musical pertenece la canción Smells like teen spirit?</label>
-                            <input id="respuesta5"required  name="respuesta5" type="text">
+                            <label  id="l5"  for="respuesta5"></label>
+                            <input class="input" id="respuesta5"required  name="respuesta5" type="text">
 
                             <button class="buttonGe" type="submit">listo</button>
                             <button class="btnL" type="button">cambiar de pregunta</button>
@@ -152,14 +152,14 @@
                     <div>
                         <h2>tus preguntas son :</h2>
                         <form id="formDep">
-                            <label for="respuesta6">A- ¿cual es el actual jugador con mas balones de oro?</label>
-                            <input  id="respuesta6"  required    name="respuesta6" type="text">
+                            <label  id="l6"  for="respuesta6"></label>
+                            <input class="input"  id="respuesta6"  required    name="respuesta6" type="text">
 
-                            <label for="respuesta7">B- ¿Qué selección ganó el Mundial de fútbol de Brasil en el 2014?</label>
-                            <input  id="respuesta7"  required name="respuesta7"   type="text">
+                            <label  id="l7"  for="respuesta7"></label>
+                            <input class="input"  id="respuesta7"  required name="respuesta7"   type="text">
 
-                            <label for="respuesta8">C- ¿En qué pais nació Valentino Rossi?</label>
-                            <input  id="respuesta8"  required name="respuesta8"   type="text">
+                            <label  id="l8"  for="respuesta8"></label>
+                            <input class="input"  id="respuesta8"  required name="respuesta8"   type="text">
                             
                             <button class="buttonGe" type="submit">listo</button>
                             <button class="btnL" type="button">cambiar de pregunta</button>
@@ -181,14 +181,14 @@
                     <div>
                         <h2>tus preguntas son :</h2>
                         <form id="formArte">
-                            <label  for="respuesta9"> A- ¿cual es el nombre del pintor europeo del siglo XIX que es conocido por cortarse la oreja?</label>
-                            <input required id="respuesta9"  name="respuesta9"  type="text">
+                            <label  id="l9"   for="respuesta9"> </label>
+                            <input class="input" required id="respuesta9"  name="respuesta9"  type="text">
 
-                            <label for="respuesta10">B- ¿Quién es el autor de la Ilíada y la Odisea?</label>
-                            <input required id="respuesta10" name="respuesta10"  type="text">
+                            <label id="l10"   for="respuesta10"></label>
+                            <input class="input" required id="respuesta10" name="respuesta10"  type="text">
 
-                            <label for="respuesta11">C- ¿Quién pintó la Capilla Sixtina?</label>
-                            <input required id="respuesta11" name="respuesta11" type="text">
+                            <label  id="l11"  for="respuesta11"></label>
+                            <input class="input" required id="respuesta11" name="respuesta11" type="text">
                             <button class="buttonGe"   type="submit">listo</button>
                             <button class="btnL" type="button">cambiar de pregunta</button>
 
