probando fondos con archivo json

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <button id="verPuntos" type="submit">Ver Mi Puntaje</button>
             <button id="Guardar" type="submit">Guardar Puntos</button>
             <h1>Bienvenido a Triviaquest</h1>
-            <button type="button" id="cambiarFondo" href="index.html">Cambiar Fondo</button>
+            
+            <button type="button" id="cambiarFondo" href="index.html">Cambiar Fondo Galeria</button>
+
+          
 
         </nav>
 
