--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button id="Guardar" type="submit">Guardar Puntos</button>
             <h1>Bienvenido a Triviaquest</h1>
             
-            <button type="button" id="cambiarFondo" href="index.html">Cambiar Fondo Galeria</button>
+            <button type="button" id="cambiarFondo" href="index.html">Cambiar Fondo </button>
 
             
 
